--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Aprendiendo Git</title>
 </head>
 <body>
+    <h1>Aprendiendo Git</h1>
     <script src="script.js"></script>
 </body>
 </html>
